# yt-tui

./: .gitignore  Cargo.toml  README.md  recovered_utilities.rs
src/: about.md  angies_theme.json  app_state.rs  authenticate.rs  balints_theme.json  colors.rs  main.rs  patriks_theme.json  rekas_theme.json  render.rs  state_test.rs  test_color.json  tui.rs  utilities.rs
src/themes/: patriks_theme.json  pink_theme.json  yellow_theme.json
