[package]
name = "yt_tui"
version = "1.31.0"
edition = "2018"

[dependencies]


rand = "0.8"

clap = { version = "4.0", features = ["derive"] }

anyhow = "1.0"

tokio = { version = "1", features = ["full"] }

oauth2 = { version = "4", features = ["reqwest"] }

reqwest = { version = "0.11", features = ["json"] }

url = "2"

serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"

tiny_http = "0.11"

crossterm = { version = "0.19", features = [ "serde" ] }

chrono = { version = "0.4", features = ["serde"] }

tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }

thiserror = "1.0"

futures ="0.3"

once_cell ="1.18"

log = "0.4"

env_logger ="0.10"

webbrowser = "0.8"
